adding stop mode to jetty, and removing "always rerun helidon tests with java 21 and preview" hack